--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.config.import=optional:secrets.properties
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mdd_db?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/mdd_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=${mysql-root-pass}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,8 +10,24 @@ spring.jpa.database=mysql
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
 application.security.jwt.secret-key=${jwt-secret-pass}
-application.security.jwt.jwtExpirationMs=86400000
+application.security.jwt.expiration=86400000
+
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.com.openclassrooms.mddapi=DEBUG
+
+# Configuration Swagger
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.tryItOutEnabled=true
