--- a/front/angular.json
+++ b/front/angular.json
@@ -65,6 +65,20 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "faker": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.faker.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -77,6 +91,9 @@
             },
             "development": {
               "browserTarget": "front:build:development"
+            },
+            "faker": {
+              "browserTarget": "front:build:faker"
             }
           },
           "defaultConfiguration": "development"
